gccida/c0/eh_data_format_name
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eh_data_format_name/src/dwarf2asm.c:810:39: error: use of undeclared identifier 'eh_data_format_name_format_names'
if ( ( unsigned int)format > 0xFF || !eh_data_format_name_format_names[format] ) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eh_data_format_name/src/dwarf2asm.c:812:8: error: use of undeclared identifier 'eh_data_format_name_format_names'
return eh_data_format_name_format_names[format]; 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/eh_data_format_name/src/obj/dwarf2asm.o] Error 1
